final: removed unceccary files

--- a/src/App.css
+++ b/src/App.css
@@ -325,5 +325,10 @@ body {
     flex-wrap: nowrap;
     gap: 3rem;
   }
+
+  .partner-heartcry {
+    position: relative;
+    left: -20px; /* adjust: -10px to -30px */
+  }
 }
 
