final: final code

--- a/src/App.css
+++ b/src/App.css
@@ -272,6 +272,7 @@ body {
   height: auto;
 }
 
+
 @media (max-width: 600px) {
   .heartcry-logo {
     max-width: 200px;
@@ -324,6 +325,10 @@ body {
   .footer-nav {
     flex-wrap: nowrap;
     gap: 3rem;
+  }
+
+  .partner-inner {
+    transform: translateX(-2rem); /* 👉 move to the RIGHT */
   }
 
 }
