--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -252,13 +252,14 @@
 
   .hero-overlay {
     justify-content: flex-start;
-    padding-top: 5rem; /* Balanced start position */
+    padding-top: 8.5rem; /* Balanced start position */
     padding-left: 1rem;
     padding-right: 1rem;
+    box-sizing: border-box;
   }
 
   .hero-content-centered {
-    padding-top: 0;
+    padding-top: 0 !important;;
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
@@ -266,6 +267,8 @@
 
   /* Fix church name cutting at edges */
   .hero-church-name {
+    max-width: 100%;
+    text-align: center;
     font-size: 3.2rem !important;
     letter-spacing: -1px;
     line-height: 1.1;
