--- a/src/pages/Belief.css
+++ b/src/pages/Belief.css
@@ -164,3 +164,10 @@
   }
 }
 
+@media (max-width: 600px) {
+  .belief-heading {
+    font-size: 2rem;
+    margin-bottom: 3rem;
+    padding: 0 1rem; /* prevents edge cutting */
+  }
+}
