--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -568,6 +568,7 @@
     margin: 0 auto 1.2rem auto;
     padding: 0 2rem;
     text-align: center;
+    margin-top: 0.8rem !important;
 
     transform: none !important;
     position: static !important;
